--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,14 +47,13 @@ MathJax.Hub.Config({
 <script type="text/javascript" src='{{ site.baseurl }}/js/bootstrap.min.js'></script> -->
 
 </head>
-
 <body>
 <div class="container" style="border:1px solid #cecece; background-color: #fdfdfe;">
   <div class="bg-primary">
     <div class="banner">
-      <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="75" style="margin-top: 15px; margin-right: 15px;"></img>
-    <center><h2> Department of Mathematics </h2></center>
-    <center><h4 style="margin-bottom: 0px"> <a href="http://www.iisc.ac.in" style="color: rgb(255,255,255);" target="_blank">INDIAN INSTITUTE OF SCIENCE </a></h4></center>
+      <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="75" style="margin-top: 4px; margin-right: 15px;"></img>
+    <center><h2 style="margin-top: 2px;"> Department of Mathematics </h2></center>
+    <center><h4 style="margin-bottom: 1px"> <a href="http://www.iisc.ac.in" style="color: rgb(255,255,255);" target="_blank">INDIAN INSTITUTE OF SCIENCE </a></h4></center>
   </div>
 </div>
 
