--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -49,7 +49,7 @@
 
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-            Teaching <span class="caret"></span></a>
+            Academics <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li class="dropdown-header"> <font color="#000000"><strong>COURSES</strong></font> </li>
             <li><a href="{{ site.baseurl }}/course-list.html">Current & Upcoming</a></li>
@@ -60,6 +60,19 @@
             <li><a href="{{ site.baseurl }}/degprog-phd.html">Ph.D. Programme</a></li>
             <li><a href="{{ site.baseurl }}/degprog-intphd.html">Integrated Ph.D. Programme</a></li>
             <li><a href="http://www.iisc.ernet.in/ug/" target="_blank">Undergraduate Programme</a></li>
+            <li role="separator" class="divider"></li>
+            <li class="dropdown-header"> <font color="#000000"><strong>RESOURCES</strong></font> </li>
+            <li>
+              <a href="http://www.iisc.ac.in/wp-content/uploads/2017/09/Student_information2017_New.pdf" target="_blank">
+                Student Information Handbook
+              </a></li>
+              <li><a href="http://www.iisc.ac.in/wp-content/uploads/2017/08/SOI_2017.pdf" target="_blank">
+                Scheme of Instruction
+              </a></li>
+              <li><a href="http://www.iisc.ernet.in/ug/SOI_2017.pdf" target="_blank">
+                Undergrad Scheme of Instruction
+              </a></li>
+
           </ul>
         </li>
 
@@ -86,28 +99,19 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Resources <span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><a href="https://outlook.office.com/owa/" target="_blank"> IISc Mail</a></li>
+            <li role="separator" class="divider"></li>
             <li><a href="http://nbhmopac.math.iisc.ac.in/cgi-bin/koha/opac-main.pl" target="_blank">Mathematics Library</a></li>
             <li><a href="http://math.iisc.ac.in/~ifcam/" target="_blank"> IFCAM </a></li>
             <li><a href="http://math.iisc.ac.in/~nmi/" target="_blank"> NMI</a></li>
            <!--<li><a href="http://math.iisc.ac.in/~opportunities/" target="_blank"> Opportunities </a></li>-->
+           <li><a href="{{ site.baseurl }}/office_2017aug.pdf" target="_blank">Offices and Phone numbers</a></li>
             <li><a href="{{ site.baseurl }}/contact-us.html"> Contact us </a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header"> <font color="#000000"><strong>UTILITIES</strong></font> </li>
             <li><a href="{{site.baseurl}}/fileIndex.html">Department Forms</a></li>
-            <li><a href="https://outlook.office.com/owa/" target="_blank"> IISc Mail</a></li>
+
             <li><a href="{{ site.baseurl}}/IIScForms.html">IISc Forms</a></li>
-            <li role="separator" class="divider"></li>
-            <li class="dropdown-header"> <font color="#000000"><strong>ACADEMIC</strong></font> </li>
-            <li>
-              <a href="http://www.iisc.ac.in/wp-content/uploads/2017/09/Student_information2017_New.pdf" target="_blank">
-                Student Information Handbook
-              </a></li>
-              <li><a href="http://www.iisc.ac.in/wp-content/uploads/2017/08/SOI_2017.pdf" target="_blank">
-                Scheme of Instruction
-              </a></li>
-              <li><a href="http://www.iisc.ernet.in/ug/SOI_2017.pdf" target="_blank">
-                Undergrad Scheme of Instruction
-              </a></li>
             <li role="separator" class="divider"></li>
             <li><a href="{{site.baseurl}}/opportunities.html">Opportunities</a></li>
           </ul>
