--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,7 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navigationbar">
-      <ul class="nav navbar-nav" style="margin: -10px;">
+      <ul class="nav navbar-nav">
         <li><a href="{{ site.baseurl }}/index.html">Home</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
@@ -119,7 +119,7 @@
         {% include publist.html %}
         {% endif %}
         <form class="navbar-form" role="search" action="http://www.google.com/search"  target="_blank">
-        <div class="input-group" style="margin-top: 2px;">
+        <div class="input-group">
             <input type="text" class="form-control" placeholder="Search" name="q" style="height: 8px;">
             <input type="hidden" class="form-control" name="sitesearch" value="math.iisc.ac.in"/>
             <div class="input-group-btn">
