--- a/extras.css
+++ b/extras.css
@@ -38,8 +38,14 @@ a:focus {
   text-decoration: underline;
 }
 
-.navbar-nav > li > a {padding-top:8px !important; padding-bottom:3px !important;}
+/*.navbar-nav > li > a {padding-top:8px !important; padding-bottom:3px !important;}
 .navbar {min-height:32px !important}
+
+.navbar-toggle {
+     padding: 0 0;
+     margin-top: 7px;
+     margin-bottom: 0;
+}*/
 
 body {
     padding-top: 20px;
