--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -100,6 +100,7 @@
             Resources <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="https://outlook.office.com/owa/" target="_blank"> IISc Mail</a></li>
+            <li><a href="http://www.ams.org/mathscinet/search.html" target="_blank">MathSciNet</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="http://nbhmopac.math.iisc.ac.in/cgi-bin/koha/opac-main.pl" target="_blank">Mathematics Library</a></li>
             <li><a href="http://math.iisc.ac.in/~ifcam/" target="_blank"> IFCAM </a></li>
