--- a/_layouts/seminar.html
+++ b/_layouts/seminar.html
@@ -20,6 +20,9 @@
 </div>
 
 <div>
-<a href="{{ site.baseurl}}/seminars-all.html "> All seminars.</a>
+  <ul>
+ <li><a href="{{ site.baseurl}}/seminars-all.html"> All seminars.</a></li>
+  <li><a href="{{ site.baseurl}}/seminars-all.html#tables"> Seminars by Year.</a></li>
+</ul>
 </div>
 {% include footer.html %}
