seminar link to years

--- a/_layouts/seminar.html
+++ b/_layouts/seminar.html
@@ -19,10 +19,11 @@
 
 </div>
 
+{% capture year %}{{page.date | date: "%Y"}}{% endcapture %}
 <div>
   <ul>
  <li><a href="{{ site.baseurl}}/seminars-all.html"> All seminars.</a></li>
-  <li><a href="{{ site.baseurl}}/seminars-all.html#tables"> Seminars by Year.</a></li>
+  <li>Seminars for <a href="{{ site.baseurl}}/Seminars{{ year }}.html">{{ year }}</a></li>
 </ul>
 </div>
 {% include footer.html %}
