--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -102,7 +102,7 @@
           <ul class="dropdown-menu">
             <li><a href="https://outlook.office.com/owa/" target="_blank"> IISc Mail</a></li>
             <li><a href="http://www.ams.org/mathscinet/search.html" target="_blank">MathSciNet</a></li>
-            <li><a href="{{ site.baseurl }}/sshinfo.html" target="_blank">Access the IISc network from outside</a></li>
+            <li><a href="{{ site.baseurl }}/computerfaqs.html" target="_blank">Computer/Network FAQs</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="http://math.iisc.ac.in/~library/" target="_blank">Mathematics Library</a></li>
             <li><a href="http://math.iisc.ac.in/~ifcam/" target="_blank"> IFCAM </a></li>
