--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -103,6 +103,7 @@
             <li><a href="https://outlook.office.com/owa/" target="_blank"> IISc Mail</a></li>
             <li><a href="http://www.ams.org/mathscinet/search.html" target="_blank">MathSciNet</a></li>
             <li><a href="{{ site.baseurl }}/computerfaqs.html">Computer/Network FAQs</a></li>
+            <li><a href="http://www.math.iisc.ernet.in/moodle/" target="_blank">Moodle</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="http://math.iisc.ac.in/~library/" target="_blank">Mathematics Library</a></li>
             <li><a href="http://math.iisc.ac.in/~ifcam/" target="_blank"> IFCAM </a></li>
