--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -116,6 +116,7 @@
             <li><a href="{{site.baseurl}}/fileIndex.html">Department Forms</a></li>
 
             <li><a href="{{ site.baseurl}}/IIScForms.html">IISc Forms</a></li>
+            <li><a href="http://iams.admin.iisc.ernet.in/" target="_blank">IAMS</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="{{site.baseurl}}/opportunities.html">Opportunities</a></li>
           </ul>
