--- a/_includes/course-table.html
+++ b/_includes/course-table.html
@@ -2,7 +2,7 @@
 
   <tr>
     <strong>
-      <td><b>Course No.</b></td> <td><b>Credits</b></td><td><b>Course Title</b></td> <td><b>Instructor</b></td>
+      <td><b>Course No.</b></td> <td><b>Credits</b></td><td><b>Course Title</b></td> <td><b>Instructor</b></td><td><b>Timings</b></td>
     </strong>
   </tr>
   {% for course in list %}
@@ -24,6 +24,6 @@
 
     <a href="{{ lnk }}"> {{ course.name }} </a> </td>
   <td> {{ course.instructor}}</td>
+  <td>{{ course.timing }}</td>
   </tr>
   {% endfor %}
- 
