date, time separated

--- a/_includes/semester-courses.html
+++ b/_includes/semester-courses.html
@@ -1,8 +1,8 @@
 
 <table class="table table-bordered">
 
-<tr><td><h4> Core for Int. Ph.D. 1st year/ U.G. 3rd year </h4></td>
-  <td></td><td></td><td><td></td></td>
+<tr><td><h4> Core for Int. Ph.D. 1st / U.G. 3rd year </h4></td>
+  <td></td><td></td><td><td></td></td><td></td>
 </tr>
 {% assign list = semester.core1 %}
 
@@ -11,7 +11,7 @@
 
 {% if semester.core2 %}
 <tr> <td><h4>Core for Int. Ph.D. second year</h4> </td>
-  <td></td><td></td><td></td><td></td></tr>
+  <td></td><td></td><td></td><td></td><td></td></tr>
 
 {% assign list = semester.core2 %}
 
@@ -19,7 +19,7 @@
 {% endif %}
 
 <tr><td><h4> Electives  </h4></td>
-  <td></td><td></td><td></td><td></td></tr>
+  <td></td><td></td><td></td><td></td><td></td></tr>
 
 {% assign list = semester.electives %}
 
