--- a/_includes/course-table.html
+++ b/_includes/course-table.html
@@ -25,6 +25,6 @@
 
     <a href="{{ lnk }}"> {{ course.name }} </a> </td>
   <td> {{ course.instructor}}</td>
-  <td> {{ course.timing }}Mon, Wed, Fri: 11:00am-12:00</td>
+  <td> {{ course.timing }}</td>
   </tr>
   {% endfor %}
