--- a/_includes/course-table.html
+++ b/_includes/course-table.html
@@ -2,7 +2,8 @@
 
   <tr>
     <strong>
-      <td><b>Course No.</b></td> <td><b>Credits</b></td><td><b>Course Title</b></td> <td><b>Instructor</b></td>
+      <td><b>Course No.</b></td> <td><b>Credits</b></td><td><b>Course Title</b></td>
+      <td><b>Instructor</b></td><td  class="text-center"><b>Timing</b></td>
     </strong>
   </tr>
   {% for course in list %}
@@ -24,6 +25,6 @@
 
     <a href="{{ lnk }}"> {{ course.name }} </a> </td>
   <td> {{ course.instructor}}</td>
+  <td> {{ course.timing }}</td>
   </tr>
   {% endfor %}
- 
