undo timing to repair

--- a/_includes/course-table.html
+++ b/_includes/course-table.html
@@ -25,6 +25,6 @@
 
     <a href="{{ lnk }}"> {{ course.name }} </a> </td>
   <td> {{ course.instructor}}</td>
-  <td> {{ course.timing }}</td>
+  <!-- <td> {{ course.timing }}</td> -->
   </tr>
   {% endfor %}
