--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -91,7 +91,7 @@
     News & Events <span class="caret"></span></a>
   <ul class="dropdown-menu">
     <li><a href="{{ site.baseurl }}/seminars-all.html">Seminars</a></li>
-      <li><a href="{{ site.baseurl }}/news.html">News</a></li>
+      <li><a href="{{ site.baseurl }}/news.html">News & Events</a></li>
       <li><a href="https://iiscmathstudentseminars.wordpress.com/", target="_blank">Student Seminars</a></li>
   </ul>
 </li>
