minor changes in nav bar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -109,8 +109,8 @@
             <li><a href="http://math.iisc.ac.in/~ifcam/" target="_blank"> IFCAM </a></li>
             <li><a href="http://math.iisc.ac.in/~nmi/" target="_blank"> NMI</a></li>
            <!--<li><a href="http://math.iisc.ac.in/~opportunities/" target="_blank"> Opportunities </a></li>-->
-           <li><a href="{{ site.baseurl }}/office_2017aug.pdf" target="_blank">Offices and Phone numbers</a></li>
-            <li><a href="{{ site.baseurl }}/contact-us.html"> Contact us </a></li>
+           <li><a href="{{ site.baseurl }}/office_2017aug.pdf" target="_blank">Offices and Phone Numbers</a></li>
+            <li><a href="{{ site.baseurl }}/contact-us.html"> Contact Us </a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header"> <font color="#000000"><strong>UTILITIES</strong></font> </li>
             <li><a href="{{site.baseurl}}/fileIndex.html">Department Forms</a></li>
