registration link in NavBar

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -101,6 +101,7 @@
             Resources <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="https://outlook.office.com/owa/" target="_blank"> IISc Mail</a></li>
+            <li> <a href="http://acadserver.admin.iisc.ac.in/course/" target="_blank">IISc Course Registration </a></li>
             <li><a href="http://www.ams.org/mathscinet/search.html" target="_blank">MathSciNet</a></li>
             <li><a href="{{ site.baseurl }}/computerfaqs.html">Computer/Network FAQs</a></li>
             <li><a href="http://www.math.iisc.ernet.in/moodle/" target="_blank">Moodle</a></li>
