--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -59,7 +59,7 @@
             <li class="dropdown-header"> <font color="#000000"><strong>DEGREE PROGRAMMES</strong></font> </li>
             <li><a href="{{ site.baseurl }}/degprog-phd.html">Ph.D. Programme</a></li>
             <li><a href="{{ site.baseurl }}/degprog-intphd.html">Integrated Ph.D. Programme</a></li>
-            <li><a href="http://www.iisc.ernet.in/ug/" target="_blank">Undergraduate Programme</a></li>
+            <li><a href="http://www.iisc.ac.in/ug/" target="_blank">Undergraduate Programme</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header"> <font color="#000000"><strong>RESOURCES</strong></font> </li>
             <li>
@@ -69,7 +69,7 @@
               <li><a href="http://www.iisc.ac.in/wp-content/uploads/2017/08/SOI_2017.pdf" target="_blank">
                 Scheme of Instruction
               </a></li>
-              <li><a href="http://www.iisc.ernet.in/ug/SOI_2017.pdf" target="_blank">
+              <li><a href="http://www.iisc.ac.in/ug/SOI_2017.pdf" target="_blank">
                 Undergrad Scheme of Instruction
               </a></li>
 
@@ -104,7 +104,7 @@
             <li> <a href="http://acadserver.admin.iisc.ac.in/course/" target="_blank">IISc Course Registration </a></li>
             <li><a href="http://www.ams.org/mathscinet/search.html" target="_blank">MathSciNet</a></li>
             <li><a href="{{ site.baseurl }}/computerfaqs.html">Computer/Network FAQs</a></li>
-            <li><a href="http://www.math.iisc.ernet.in/moodle/" target="_blank">Moodle</a></li>
+            <li><a href="http://www.math.iisc.ac.in/moodle/" target="_blank">Moodle</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="http://math.iisc.ac.in/~library/" target="_blank">Mathematics Library</a></li>
             <li><a href="http://math.iisc.ac.in/~ifcam/" target="_blank"> IFCAM </a></li>
