--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -105,6 +105,7 @@
             <li><a href="http://www.ams.org/mathscinet/search.html" target="_blank">MathSciNet</a></li>
             <li><a href="{{ site.baseurl }}/computerfaqs.html">Computer/Network FAQs</a></li>
             <li><a href="http://www.math.iisc.ac.in/moodle/" target="_blank">Moodle</a></li>
+            <li> <a href="http://www.iisc.ac.in/wp-content/uploads/2018/02/change_of_Important_Email_IDs.pdf" target="_blank">Changed E-mails (at IISc)</a> </li>
             <li role="separator" class="divider"></li>
             <li><a href="http://math.iisc.ac.in/~library/" target="_blank">Mathematics Library</a></li>
             <li><a href="http://math.iisc.ac.in/~ifcam/" target="_blank"> IFCAM </a></li>
