line break in table

--- a/_includes/semester-courses.html
+++ b/_includes/semester-courses.html
@@ -1,7 +1,8 @@
 
 <table class="table table-bordered">
 
-<tr><td><h4> Core for Int. Ph.D. 1st / U.G. 3rd year </h4></td>
+<tr><td style="white-space: pre;"><h4> Core for Int. Ph.D. 1st
+ and U.G. 3rd year </h4></td>
   <td></td><td></td><td><td></td></td>
 </tr>
 {% assign list = semester.core1 %}
