formatting semester tables with colspan

--- a/_includes/semester-courses.html
+++ b/_includes/semester-courses.html
@@ -1,11 +1,8 @@
 
 <table class="table table-bordered">
 
-<tr><td style="white-space: pre;"><h4> Core for
-Int. Ph.D. 1st
-and UG 3rd
-year </h4></td>
-  <td></td><td></td><td><td></td></td>
+<tr><td colspan="7" class="text-center"><h4> Core for Int. Ph.D. 1st and UG 3rd year </h4></td>
+
 </tr>
 {% assign list = semester.core1 %}
 
@@ -13,18 +10,16 @@ year </h4></td>
 
 
 {% if semester.core2 %}
-<tr> <td style="white-space: pre;"><h4>Core for
-Int. Ph.D.
-2nd year</h4></td>
-  <td></td><td></td><td></td><td></td></tr>
+<tr> <td colspan="7" class="text-center"><h4>Core for Int. Ph.D. 2nd year</h4></td>
+  </tr>
 
 {% assign list = semester.core2 %}
 
 {% include course-table.html %}
 {% endif %}
 
-<tr><td><h4> Electives  </h4></td>
-  <td></td><td></td><td></td><td></td></tr>
+<tr><td  colspan="7" class="text-center"><h4> Electives  </h4></td>
+  </tr>
 
 {% assign list = semester.electives %}
 
