Centred course title, pre-reqs, instructor

--- a/_includes/course-table.html
+++ b/_includes/course-table.html
@@ -2,9 +2,10 @@
 
   <tr>
     <strong>
-      <td><b>Course No.</b></td> <td><b>Credits</b></td><td><b>Course Title</b></td>
-      <td><b>Instructor</b></td>
-      <td><b>Pre-requisites</b></td>
+      <td><b>Course No.</b></td> <td><b>Credits</b></td>
+      <td  class="text-center"><b>Course Title</b></td>
+      <td  class="text-center"><b>Instructor</b></td>
+      <td  class="text-center"><b>Pre-requisites</b></td>
       <td style="white-space: pre;"><b>Additional
 Prerequisites for
 Undegraduates</b></td>
