--- a/_includes/semester-courses.html
+++ b/_includes/semester-courses.html
@@ -1,7 +1,7 @@
 
 <table class="table table-bordered">
 
-<tr><td colspan="7" class="text-center"><h4> Core for Int. Ph.D. 1st and UG 3rd year </h4></td>
+<tr><td colspan="7" class="text-center"><h3> Core for Int. Ph.D. 1st year and UG 3rd year </h3></td>
 
 </tr>
 {% assign list = semester.core1 %}
@@ -10,7 +10,7 @@
 
 
 {% if semester.core2 %}
-<tr> <td colspan="7" class="text-center"><h4>Core for Int. Ph.D. 2nd year</h4></td>
+<tr> <td colspan="7" class="text-center"><h3>Core for Int. Ph.D. 2nd year</h3></td>
   </tr>
 
 {% assign list = semester.core2 %}
@@ -18,7 +18,7 @@
 {% include course-table.html %}
 {% endif %}
 
-<tr><td  colspan="7" class="text-center"><h4> Electives  </h4></td>
+<tr><td  colspan="7" class="text-center"><h3> Electives  </h3></td>
   </tr>
 
 {% assign list = semester.electives %}
