--- a/_includes/semester-courses.html
+++ b/_includes/semester-courses.html
@@ -24,4 +24,13 @@
 {% assign list = semester.electives %}
 
 {% include course-table.html %}
+
+<tr><td  colspan="7" class="text-center"><h3> Undergraduate Courses  </h3></td>
+  </tr>
+
+{% assign list = semester.ug %}
+
+{% include course-table.html %}
+
+
 </table>
