--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -92,6 +92,8 @@
   <ul class="dropdown-menu">
     <li><a href="{{ site.baseurl }}/seminars-all.html">Seminars</a></li>
       <li><a href="{{ site.baseurl }}/news.html">News & Events</a></li>
+      <li role="separator" class="divider"></li>
+      <li> <a href="{{ site.baseurl }}/eigenfunctions-all.html">Eigenfunctions Seminars</a> </li>
       <li><a href="https://iiscmathstudentseminars.wordpress.com/", target="_blank">Student Seminars</a></li>
   </ul>
 </li>
