--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -94,6 +94,8 @@
       <li><a href="{{ site.baseurl }}/news.html">News & Events</a></li>
       <li role="separator" class="divider"></li>
       <li> <a href="{{ site.baseurl }}/eigenfunctions-all.html">Eigenfunctions Seminars</a> </li>
+      <li> <a href="http://math.iisc.ac.in/~manju/Seminar/seminar.html" target="_blank">Bangalore Probability Seminar </a> </li>
+      <li> <a href="http://www.math.iisc.ac.in/~khare/algcomb18-19.html" target="_blank">Algebra & Combinatorics Seminar</a> </li>
       <li><a href="https://iiscmathstudentseminars.wordpress.com/", target="_blank">Student Seminars</a></li>
   </ul>
 </li>
