final examination schedule

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -54,6 +54,7 @@
             <li class="dropdown-header"> <font color="#000000"><strong>COURSES</strong></font> </li>
             <li><a href="{{ site.baseurl }}/course-list.html">Current & Upcoming</a></li>
             <li><a href="{{ site.baseurl }}/course-schedule.html">Course Schedule</a></li>
+            <li><a href="{{ site.baseurl }}/exam-schedule-dec-2018.html">Final Examination Schedule</a></li>
             <li><a href="{{ site.baseurl }}/catalogue.html">Catalogue</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header"> <font color="#000000"><strong>DEGREE PROGRAMMES</strong></font> </li>
