--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -23,7 +23,7 @@
     {{ content }}
 <br>
 {% if page.books %}
-<h4> Suggested books : </h4>
+<h4> Suggested books and references: </h4>
 <ol>
 {% for book in page.books %}
  <li>
