--- a/extras.css
+++ b/extras.css
@@ -41,6 +41,16 @@ a.algebra-combinatorics-seminar:focus {
   text-decoration: underline;
 }
 
+.geometry-topology-seminar {
+  color: fuchsia;
+}
+
+a.geometry-topology-seminar:hover,
+a.geometry-topology-seminar:focus {
+  color: fuchsia;
+  text-decoration: underline;
+}
+
 .eigenfunctions-seminar {
   color: #8a6d3b;
 }
