--- a/_layouts/seminar.html
+++ b/_layouts/seminar.html
@@ -1,5 +1,9 @@
 {% include header.html %}
 
+{% if page.series %}<h4><a
+href="{% if page.website %}{{ page.website }}#{{ page.date | date: "%Y-%m-%d" }}{% else %}{{ site.baseurl }}/{{ page.series | slugify }}.html#{{ page.date | date: "%Y-%m-%d" }}-{{ page.speaker | slugify }}{% endif %}" class="{{ page.series | slugify }}"
+>{{page.series}} </a></h4>{% endif %}
+
 <div class="row">
 
   <div class="col-md-10">
