--- a/extras.css
+++ b/extras.css
@@ -42,12 +42,12 @@ a.algebra-combinatorics-seminar:focus {
 }
 
 .geometry-topology-seminar {
-  color: cyan;
+  color: darkcyan;
 }
 
 a.geometry-topology-seminar:hover,
 a.geometry-topology-seminar:focus {
-  color: cyan;
+  color: darkcyan;
   text-decoration: underline;
 }
 
