--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -92,11 +92,12 @@
     News & Events <span class="caret"></span></a>
   <ul class="dropdown-menu">
     <li><a href="{{ site.baseurl }}/seminars-all.html">Seminars</a></li>
-      <li><a href="{{ site.baseurl }}/news.html">News & Events</a></li>
+      <li><a href="{{ site.baseurl }}/news.html">News</a></li>
       <li role="separator" class="divider"></li>
       <li> <a href="{{ site.baseurl }}/eigenfunctions-seminar.html">Eigenfunctions Seminars</a> </li>
       <li> <a href="http://math.iisc.ac.in/~manju/Seminar/seminar.html" target="_blank">Bangalore Probability Seminar </a> </li>
       <li> <a href="http://www.math.iisc.ac.in/~khare/algcomb18-19.html" target="_blank">Algebra & Combinatorics Seminar</a> </li>
+      <li> <a href="http://math.iisc.ac.in/~vvdatar/gt_Spring_2019.html" target="_blank">Geometry & Topology Seminar</a> </li>
       <li><a href="https://iiscmathstudentseminars.wordpress.com/", target="_blank">Student Seminars</a></li>
   </ul>
 </li>
