--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
 
     <div class="row" style="margin-left: 10px;">
       <a href ="{{ site.baseurl }}/contact-us.html" style="color: rgb(255,255,255); text-decoration: underline;" >
-        <b>Contact</b></a><b>:</b> +91 (80) 2293 2711, +91 (80) 2293 2265 <b>E-mail:<b> <font face="Courier New">chairman.math[at]iisc[dot]ac[dot]in</font></a>
+        <b>Contact</b></a><b>:</b> +91 (80) 2293 2711, +91 (80) 2293 2265; <b>E-mail:<b> <font face="Courier New">chairman.math[at]iisc[dot]ac[dot]in</font></a>
       <div class="pull-right" style="margin-right: 20px;">
 
           Last updated: {{ site.time | date_to_long_string }}
