--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,10 +6,10 @@
   </div>
   <div class="bg-primary" style="border-radius: 0px; margin-top: 7px; margin-bottom: 7px; padding:7px;">
 
-    <div class="row" style="margin-left: 10px;">
+    <div class="row" style="margin-left: 5px;">
       <a href ="{{ site.baseurl }}/contact-us.html" style="color: rgb(255,255,255); text-decoration: underline;" >
-        <b>Contact</b></a><b>:</b> +91 (80) 2293 2711, +91 (80) 2293 2265 ; <b>E-mail:<b> <font face="Courier New">chairman.math[at]iisc[dot]ac[dot]in</font></a>
-      <div class="pull-right" style="margin-right: 20px;">
+        <b>Contact</b></a><b>:</b> +91 (80) 2293 2711, +91 (80) 2293 2265 ; &nbsp;&nbsp;&nbsp; <b>E-mail:<b> <font face="Courier New">chairman.math[at]iisc[dot]ac[dot]in</font></a>
+      <div class="pull-right" style="margin-right: 15px;">
 
           Last updated: {{ site.time | date_to_string }}
       </div>
