--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -35,11 +35,12 @@
             <li><a href="{{ site.baseurl }}/postdocs.html">Postdocs</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header"> <font color="#000000"><strong>STUDENTS</strong></font></li>
-            <li><a href="{{ site.baseurl }}/phds.html">Ph.D. Alumni</a></li>
             <li><a href="{{ site.baseurl }}/students-phd.html">Ph.D.</a></li>
             <li><a href="{{ site.baseurl }}/students-intphd.html">Integrated Ph.D.</a></li>
             <li><a href="{{ site.baseurl }}/students-intdisphd.html">Interdisciplinary Ph.D.</a></li>
-            </li>
+            <li role="separator" class="divider"></li>
+            <li class="dropdown-header"> <font color="#000000"><strong>ALUMNI</strong></font></li>
+            <li><a href="{{ site.baseurl }}/phd-alumni.html">Ph.D.</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="{{ site.baseurl }}/staff.html">Staff</a></li>
             <li><a href="{{ site.baseurl }}/trainees.html">Project Staff</a></li>
