--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -41,6 +41,7 @@
             <li role="separator" class="divider"></li>
             <li class="dropdown-header"> <font color="#000000"><strong>ALUMNI</strong></font></li>
             <li><a href="{{ site.baseurl }}/phd-alumni.html">Ph.D.</a></li>
+            <li><a href="{{ site.baseurl }}/ug-alumni.html">Undergraduate </a></li>
             <li role="separator" class="divider"></li>
             <li><a href="{{ site.baseurl }}/staff.html">Staff</a></li>
             <li><a href="{{ site.baseurl }}/trainees.html">Project Staff</a></li>
