mathjax in code

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@ MathJax.Hub.Config({
     inlineMath: [ ['$', '$'] ],
     displayMath: [ ['$$', '$$']],
     processEscapes: true,
-    skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
+    skipTags: ['script', 'noscript', 'style', 'textarea', 'pre']
   },
   messageStyle: "none",
   "HTML-CSS": { preferredFont: "TeX", availableFonts: ["STIX","TeX"] }
