aprg seminars link

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -101,7 +101,7 @@
       <li> <a href="http://math.iisc.ac.in/~manju/Seminar/seminar.html" target="_blank">Bangalore Probability Seminar </a> </li>
       <li> <a href="http://www.math.iisc.ac.in/~khare/algcomb18-19.html" target="_blank">Algebra & Combinatorics Seminar</a> </li>
       <li> <a href="http://math.iisc.ac.in/~vvdatar/gt_Spring_2019.html" target="_blank">Geometry & Topology Seminar</a> </li>
-      <li><a href="http://math.iisc.ac.in/~aprg/index.php?id=events">APRG Seminar</a>
+      <li><a href="http://math.iisc.ac.in/~aprg/index.php?id=seminar">APRG Seminar</a>
       <li><a href="https://iiscmathstudentseminars.wordpress.com/", target="_blank">Student Seminars</a></li>
   </ul>
 </li>
