--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -27,8 +27,7 @@
 <ol>
 {% for book in page.books %}
  <li>
-   {% if book.author %}{{ book.author}}, {% endif %} <em>{{ book.title }}</em>
- {% if book.publ %},{{ book. publ }}{% endif %}.</li>
+   {% if book.author %}{{ book.author | strip }}, {% endif %} <em>{{ book.title | strip }}</em>{% if book.publ %}, {{ book. publ | strip }}{% endif %}.</li>
  {% endfor %}
  </ol>
 {% endif %}
