better course navigation

--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -34,5 +34,5 @@
 
 
 <br>
-<h4><a href="{{ site.baseurl}}/catalogue.html">All Courses</a></h4>
+<h4><a href="{{ site.baseurl}}/catalogue.html#{{ page.code | slugify }}">All Courses</a></h4>
 {% include footer.html %}
