faculty pubs link

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -20,7 +20,8 @@
             Research <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="{{ site.baseurl }}/research-areas.html">Research Areas</a></li>
-            <li><a href="{{ site.baseurl }}/pubs.html">Publications</a></li>
+            <li><a href="{{ site.baseurl }}/pubs.html">All Publications</a></li>
+            <li><a href="{{ site.baseurl }}/pubs-by-author.html">Faculty Publications (by author)</a> </li>
           </ul>
         </li>
 
