--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -98,6 +98,7 @@
     <li><a href="{{ site.baseurl }}/seminars-all.html">Seminars</a></li>
       <li><a href="{{ site.baseurl }}/news.html">News</a></li>
       <li role="separator" class="divider"></li>
+      <li> <a href="{{ site.baseurl }}/thesis.html">Thesis colloquium/defence</a> </li>
       <li> <a href="{{ site.baseurl }}/eigenfunctions-seminar.html">Eigenfunctions Seminars</a> </li>
       <li> <a href="http://math.iisc.ac.in/~manju/Seminar/seminar.html" target="_blank">Bangalore Probability Seminar </a> </li>
       <li> <a href="http://www.math.iisc.ac.in/~khare/algcomb18-19.html" target="_blank">Algebra & Combinatorics Seminar</a> </li>
