correction years of seminars

--- a/_includes/seminar-table.html
+++ b/_includes/seminar-table.html
@@ -25,6 +25,8 @@
 <div class="" id = "tables">
   <h4>For year:</h4>
   <ul>
+    <li><a href="Seminars2019.html">2019</a></li>
+    <li><a href="Seminars2018.html">2018</a></li>
     <li><a href="Seminars2017.html">2017</a></li>
     <li><a href="Seminars2016.html">2016</a></li>
     <li><a href="Seminars2015.html">2015</a></li>
