--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,6 +22,7 @@
             <li><a href="{{ site.baseurl }}/research-areas.html">Research Areas</a></li>
             <li><a href="{{ site.baseurl }}/pubs.html">All Publications</a></li>
             <li><a href="{{ site.baseurl }}/pubs-by-author.html">Faculty Publications (by author)</a> </li>
+            <li><a href="{{ site.baseurl }}/academic-reports.html">Academic Review Reports</a> </li>
           </ul>
         </li>
 
