--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -101,10 +101,10 @@
       <li role="separator" class="divider"></li>
       <li> <a href="{{ site.baseurl }}/eigenfunctions-seminar.html">Eigenfunctions Seminars</a> </li>
       <li> <a href="{{ site.baseurl }}/thesis.html">Thesis colloquium/defence</a> </li>
-      <li> <a href="http://math.iisc.ac.in/~manju/Seminar/seminar.html" target="_blank">Bangalore Probability Seminar </a> </li>
+      <li> <a href="http://www.math.iisc.ac.in/~manju/Seminar/seminar.html" target="_blank">Bangalore Probability Seminar </a> </li>
       <li> <a href="http://www.math.iisc.ac.in/~khare/algcomb19-20.html" target="_blank">Algebra & Combinatorics Seminar</a> </li>
-      <li> <a href="http://http://math.iisc.ac.in/~vvdatar/gt_2019_Fall.html" target="_blank">Geometry & Topology Seminar</a> </li>
-      <li><a href="http://math.iisc.ac.in/~aprg/index.php?id=seminar19-20">APRG Seminar</a>
+      <li> <a href="http://www.math.iisc.ac.in/~vvdatar/gt_2019_Fall.html" target="_blank">Geometry & Topology Seminar</a> </li>
+      <li><a href="http://www.math.iisc.ac.in/~aprg/index.php?id=seminar19-20">APRG Seminar</a>
       <li><a href="https://iiscmathstudentseminars.wordpress.com/", target="_blank">Student Seminars</a></li>
   </ul>
 </li>
