--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -48,6 +48,8 @@
             <li role="separator" class="divider"></li>
             <li><a href="{{ site.baseurl }}/staff.html">Staff</a></li>
             <li><a href="{{ site.baseurl }}/trainees.html">Project Staff</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="{{ site.baseurl }}/visitors.html">Visitors</a></li>
             </li>
           </ul>
         </li>
@@ -98,6 +100,8 @@
   <ul class="dropdown-menu">
     <li><a href="{{ site.baseurl }}/seminars-all.html">Seminars</a></li>
       <li><a href="{{ site.baseurl }}/news.html">News</a></li>
+      <li role="separator" class="divider"></li>
+      <li><a href="{{ site.baseurl }}/visitors.html">Visitors</a></li>
       <li role="separator" class="divider"></li>
       <li> <a href="{{ site.baseurl }}/eigenfunctions-seminar.html">Eigenfunctions Seminars</a> </li>
       <li> <a href="{{ site.baseurl }}/thesis.html">Thesis colloquium/defence</a> </li>
