--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,8 +21,8 @@
   </div>
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script type="text/javascript" src='{{ site.baseurl }}/js/bootstrap.min.js'></script>
+{{/*  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script type="text/javascript" src='{{ site.baseurl }}/js/bootstrap.min.js'></script>  */}}
 
 </body>
 </html>
