--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/flatly/bootstrap.min.css">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="{{ site.baseurl}}/extras.css">
@@ -65,8 +65,8 @@ MathJax.Hub.Config({
   <div class="bg-primary">
     <div class="banner">
       <img src="{{ site.baseurl }}/IISc_logo_transparentI.png" class="pull-right" width="75" style="margin-top: 4px; margin-right: 15px;"></img>
-    <center><h2 style="margin-top: 2px;"> Department of Mathematics </h2></center>
-    <center><h4 style="margin-bottom: 1px"> <a href="http://www.iisc.ac.in" style="color: rgb(255,255,255);" target="_blank">INDIAN INSTITUTE OF SCIENCE </a></h4></center>
+    <center><h2 style="margin-top: 2px;" class="text-white"> Department of Mathematics </h2></center>
+    <center><h4 style="margin-bottom: 1px"> <a href="http://www.iisc.ac.in" class="text-white" target="_blank">INDIAN INSTITUTE OF SCIENCE </a></h4></center>
   </div>
 </div>
 
