--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,13 +6,12 @@
   </div>
   <div class="bg-primary" style="border-radius: 0px; margin-top: 7px; margin-bottom: 7px; padding:7px;">
 
-    <div class="row" style="margin-left: 5px;">
-      <a href ="{{ site.baseurl }}/contact-us.html" style="color: rgb(255,255,255); text-decoration: underline;" >
-        <b>Contact</b></a><b>:</b> +91 (80) 2293 2711, +91 (80) 2293 2265 ; &nbsp;&nbsp;&nbsp; <b>E-mail:<b> <font face="Courier New">chair.math[at]iisc[dot]ac[dot]in</font></a>
-      <div class="pull-right" style="margin-right: 15px;">
-
-          Last updated: {{ site.time | date_to_string }}
-      </div>
+    <div class="row text-white" style="margin-left: 5px;">
+      <div class="col">
+      <a href ="{{ site.baseurl }}/contact-us.html" class="text-white">
+        <u><b>Contact</b></a><b>:</b></u> +91 (80) 2293 2711, +91 (80) 2293 2265 ; &nbsp;&nbsp;&nbsp; <b>E-mail:<b> <font face="Courier New">chair.math[at]iisc[dot]ac[dot]in</font></a>
+        </div>
+          <div class="col text-right">Last updated: {{ site.time | date_to_string }}</div>
     </div>
     </div>
 
