--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,7 +31,7 @@
 
   <script src="{{ site.baseurl }}/js/jquery-3.3.1.slim.min.js"></script>
   <script src="{{ site.baseurl }}/js/popper.min.js"></script>
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/flatly/bootstrap.min.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/lumen/bootstrap.min.css">
 <script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="{{ site.baseurl}}/extras.css">
@@ -56,9 +56,6 @@ MathJax.Hub.Config({
 });
 </script>
 
-<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script type="text/javascript" src='{{ site.baseurl }}/js/bootstrap.min.js'></script> -->
-
 </head>
 <body>
 <div class="container" style="border:1px solid #cecece; background-color: #fdfdfe;">
@@ -72,3 +69,5 @@ MathJax.Hub.Config({
 
 
   {% include navbar.html %}
+
+  <p>&nbsp;</p>
