--- a/extras.css
+++ b/extras.css
@@ -1,10 +1,10 @@
 
-.navbar-default .navbar-nav > li.dropdown:hover > a,
+/* .navbar-default .navbar-nav > li.dropdown:hover > a,
 .navbar-default .navbar-nav > li.dropdown:hover > a:hover,
 .navbar-default .navbar-nav > li.dropdown:hover > a:focus {
     background-color: rgb(231, 231, 231);
     color: rgb(85, 85, 85);
-}
+} */
 li.dropdown:hover > .dropdown-menu {
     display: block;
 }
